kubernetes-manifests/service-combine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-combine-deployment
spec:
  selector:
    matchLabels:
      app: service-combine
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: service-combine
    spec:
      containers:
        - image: throwawayqwerty1963/supertodo-service-combine
          name: service-combine
          ports:
            - containerPort: 4003
