kubernetes-manifests/service-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-gateway-deployment
spec:
  selector:
    matchLabels:
      app: service-gateway
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: service-gateway
    spec:
      containers:
        - image: throwawayqwerty1963/supertodo-service-gateway
          name: service-gateway
          ports:
            - containerPort: 4000
