kubernetes-manifests/service-todo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-todo-deployment
spec:
  selector:
    matchLabels:
      app: service-todo
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: service-todo
    spec:
      containers:
        - image: throwawayqwerty1963/supertodo-service-todo
          name: service-todo
          ports:
            - containerPort: 4002
