kubernetes-manifests/service-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-user-deployment
spec:
  selector:
    matchLabels:
      app: service-user
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: service-user
    spec:
      containers:
        - image: throwawayqwerty1963/supertodo-service-user
          name: service-user
          ports:
            - containerPort: 4001
