kubernetes-manifests/client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-svc
spec:
  type: LoadBalancer
  
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: client
