kubernetes-manifests/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
spec:
  ports:
    - port: 5432
  selector:
    app: super-todo-postgres
