kubernetes-manifests/service-combine-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-combine-svc
spec:
  ports:
  - port: 4003
    targetPort: 4003
    protocol: TCP
  selector:
    app: service-combine
