kubernetes-manifests/service-gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-gateway-svc
spec:
  ports:
  - port: 4000
    targetPort: 4000
  selector:
    app: service-gateway
