kubernetes-manifests/service-todo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-todo-svc
spec:
  ports:
  - port: 4002
    targetPort: 4002
    protocol: TCP
  selector:
    app: service-todo
