kubernetes-manifests/service-user-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-user-svc
spec:
  ports:
  - port: 4001
    targetPort: 4001
    protocol: TCP
  selector:
    app: service-user
